# keks-meet

./: .gitignore  COPYING  Cargo.toml  LICENCE  README.md  makefile  nodemon.json  package-lock.json  package.json  readme.md  todo.org  tsconfig.client.json  tsconfig.json  tsconfig.server.json  webpack.config.prod.js  webpack.dev.js  webpack.prod.js
client-native-export/: Cargo.toml
client-native-export-track/: Cargo.toml
client-native-export-track/src/: main.rs
client-native-gui/: Cargo.toml  mpv.conf
client-native-gui/src/: chat.rs  main.rs
client-native-lib/: Cargo.toml
client-native-lib/src/: crypto.rs  instance.rs  lib.rs  main.rs  peer.rs  protocol.rs  signaling.rs  state.rs
client-native-rift/: Cargo.toml
client-native-rift/src/: command.rs  crypto.rs  file.rs  main.rs  peer.rs  port.rs  protocol.rs  repl.rs  signaling.rs
client-web/: .gitignore  makefile  watch-builder.ts
client-web/public/: app.html  start.html
client-web/public/assets/rnnoise/: rnnoise-processor.js  rnnoise-runtime.js
client-web/public/assets/style/: chat.css  logger.css  master.css  menu.css  prefs.css  room.css
client-web/scripts/: autogen_locale.ts  find_missing_translations.ts  gen_param_table.ts  reformat_json.ts  translate.py
client-web/source/: chat.ts  download_stream.ts  helper.ts  index.ts  keybinds.ts  local_user.ts  logger.ts  menu.ts  preferences.ts  remote_user.ts  rnnoise.ts  room.ts  room_watches.ts  track_handle.ts  user.ts
client-web/source/locale/: de.ts  en.ts  es.ts  ja.ts  mod.ts
client-web/source/preferences/: decl.ts  mod.ts  ui.ts
client-web/source/protocol/: crypto.ts  mod.ts
client-web/source/resource/: file.ts  mod.ts  track.ts
client-web/source/sw/: client.ts  download.ts  download_stream.ts  init.ts  protocol.ts  worker.ts
client-web/source/user/: local.ts  mod.ts  remote.ts
client-web/style/: chat.sass  logger.sass  master.sass  menu.sass  prefs.sass  room.sass  side.sass  start.sass  watches.sass
common/: packets.d.ts
config/: config.example.toml  default.toml
public/: index.html  mkassets.sh
public/css/: master.css
public/rnnoise/: rnnoise-processor.js
public/style/: logger.css  master.css
server/: Cargo.toml  makefile
server-legacy/server/: index.ts
server/src/: assets.rs  config.rs  idgen.rs  logic.rs  main.rs  protocol.rs  room.rs
source/: models.ts  packets.ts
source/client/: helper.ts  index.ts  local_user.ts  logger.ts  menu.ts  remote_user.ts  rnnoise.ts  room.ts  track_handle.ts  types.ts  user.ts
source/server/: index.ts  room.ts
