[package]
name = "keks-meet-export-track"
version = "0.2.3"
edition = "2021"

[dependencies]
libkeks = { path = "../client-native-lib" }

clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4"

tokio = { version = "1.35", features = ["full"] }
bytes = "1.5.0"
anyhow = "1.0.79"
