[package]
name = "keks-meet-export-track"
version = "0.2.3"
edition = "2021"

[dependencies]
libkeks = { path = "../client-native-lib" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4"

tokio = { version = "1.36", features = ["full"] }
bytes = "1.5.0"
anyhow = "1.0.81"
