[package]
name = "keks-meet"
version = "0.1.0"
edition = "2021"

[dependencies]
client-native-lib = { path = "../client-native-lib" }

clap = { version = "4.4.7", features = ["derive"] }
async-std = "1.12.0"
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"

egui = "0.23.0"
eframe = "0.23.0"

libmpv = { git = "https://github.com/sirno/libmpv-rs.git", branch = "upgrade-libmpv" }

