[package]
name = "keks-meet"
version = "0.2.3"
edition = "2021"

[dependencies]
client-native-lib = { path = "../client-native-lib" }

clap = { version = "4.4.18", features = ["derive"] }
async-std = "1.12.0"
tokio = { version = "1.35.1", features = ["full"] }
env_logger = "0.11.1"
log = "0.4"
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"

egui = "0.25.0"
eframe = "0.25.0"

libmpv = { git = "https://github.com/sirno/libmpv-rs.git", branch = "upgrade-libmpv" }
