[package]
name = "keks-meet"
version = "0.2.3"
edition = "2021"

[dependencies]
libkeks = { path = "../client-native-lib" }

clap = { version = "4.5.3", features = ["derive"] }
async-std = "1.12.0"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4"
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"

egui = "0.26.2"
eframe = "0.26.2"

libmpv = { git = "https://github.com/sirno/libmpv-rs.git", branch = "upgrade-libmpv" }
