[package]
name = "client-native-lib"
version = "0.2.3"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
futures-util = "0.3.29"

webrtc = "0.9.0"
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }
url = "2.4.1"

serde = { version = "1.0.190", features = ["derive"] }
serde_json = "*"

log = "0.4"

fastpbkdf2 = "0.1.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21.5"
bytes = "1.5.0"
