[package]
name = "libkeks"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3.30"

webrtc = "0.10.1"
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }
url = "2.5.0"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"

log = "0.4"

fastpbkdf2 = "0.1.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.22.0"
bytes = "1.5.0"
