[package]
name = "rift"
version = "1.0.0"
edition = "2021"

[dependencies]
libkeks = { path = "../client-native-lib" }
clap = { version = "4.5.3", features = ["derive"] }
log = { version = "0.4", features = ["kv"] }
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
bytes = "1.5.0"
pretty_env_logger = "0.5.0"
indicatif = "0.17.8"
humansize = "2.1.3"
users = "0.11.0"
anyhow = "1.0.81"
shlex = "1.3.0"
