[package]
name = "keks-meet-server"
version = "0.1.1"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.33", features = ["full"] }
log = "0.4"
env_logger = "0.10"
futures-util = "0.3.29"
listenfd = "1.0.1"
hyper = "0.14.27"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
include_dir = "0.7.3"
toml = "0.8.6"
grass = "0.13.1"

[features]
default = []
embed_config = []
