[package]
name = "keks-meet-server"
version = "1.0.4"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3.30"
listenfd = "1.0.1"
hyper = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
include_dir = "0.7.3"
toml = "0.8.11"
grass = "0.13.2"
async-stream = "0.3.5"

[features]
default = []
embed_config = []
